--- a/x-pack/plugins/observability_solution/apm/docs/openapi/apm/bundled_serverless.yaml
+++ b/x-pack/plugins/observability_solution/apm/docs/openapi/apm/bundled_serverless.yaml
@@ -7,30 +7,18 @@ info:
     name: Elastic License 2.0
     url: https://www.elastic.co/licensing/elastic-license
 tags:
-  - name: APM agent configuration
-    description: |
-      Fine tune your APM agent configuration without redeploying your application.
-    externalDocs:
-      description: APM agent central config docs
-      url: https://www.elastic.co/guide/en/observability/current/apm-agent-configuration.html#_supported_configurations
   - name: APM agent keys
     description: |
       Configure APM agent keys to authorize requests from APM agents to the APM Server.
     externalDocs:
       description: APM agent API key docs
-      url: https://www.elastic.co/guide/en/observability/current/apm-api-key.html
+      url: https://www.elastic.co/docs/current/serverless/observability/apm-keep-data-secure#secure-communication-with-apm-agents
   - name: APM annotations
     description: |
       Annotate visualizations in the APM UI with significant events. Annotations enable you to easily see how events are impacting the performance of your applications.
     externalDocs:
       description: APM annotations docs
-      url: https://www.elastic.co/guide/en/observability/current/apm-transactions-annotations.html
-  - name: APM source maps
-    description: |
-      Upload source maps to map minified files back to original source code. Source maps allow you to maintain the speed advantage of minified code without losing the ability to debug your application.
-    externalDocs:
-      description: APM source map docs
-      url: https://www.elastic.co/guide/en/observability/current/apm-source-map-how-to.html
+      url: https://www.elastic.co/docs/current/serverless/observability/apm-track-deployments-with-annotations
 paths:
   /api/apm/agent_keys:
     post:
@@ -100,7 +88,6 @@ paths:
       summary: Create or update an annotation
       description: |
         Create a new annotation for a specific service.
-
         By default, annotations are stored in a newly created `observability-annotations` index.
         The name of this index can be changed in your `config.yml` by editing `xpack.observability.annotations.index`.
         If you change the default index name, you’ll also need to update your [user privileges](https://www.elastic.co/guide/en/observability/current/apm-app-annotation-user-create.html) accordingly.
